# APP-INTERNET-uqwk

./: FAQ.txt  HISTORY.txt  INSTALL  README.Typhoon  README.txt  uqwk.1
source/: Makefile.in  close.c  config-generic.h  config-xs4all.h  configure  configure.in  init.c  mail.c  misc.c  news.c  nntp.h  nntpclient.c  nntplib.c  offline.c  options.c  reply.c  score.c  signal.c  uqwk-version.h  uqwk.c  uqwk.h
source/contrib/olmenu+sonr/: README  olmenu.html
source/contrib/olmenu+sonr/olmenu/: olmenu  olmenu.howto  olmenu.setup
source/contrib/olmenu+sonr/sonr/: readme.sonr  sonr  sonr.quiet
source/scripts/: getsoup  putsoup  unix2mac
